# apps/api/src/application/dtos/admin.response.dto.ts
@@ -1,0 +1,8 @@
+export type AdminSummaryResponseDto = {
+  userCount: number
+  adminCount: number
+  surveyCount: number
+  activeSurveyCount: number
+  submissionCount: number
+  submissionCountLast7Days: number
+}
